<resources>
    <string name="app_name">Parking Application</string>
    <string name="email">Email</string>
    <string name="time">Enter Start Time</string>
    <string name="duration">Enter Duration</string>
    <string name="time1">0:00:AM</string>
    <string name="time2">0:00:AM</string>
    <string name="title1">Parking Garage App</string>
    <string name="pass">Password</string>
    <string name="no_acc">No Account? Sign - Up!</string>
    <string name="credit_num">Credit Card Number</string>
    <string name="credit_expire">Expiration Date</string>
    <string name="credit_code">Security Code</string>
    <string name="title2">Payment Information</string>
    <string name="credit_name">Full Name on the Card</string>
    <string name="credit_address">Billing Address</string>
    <string name="credit_zip">Zip Code</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="title3">Personal Information</string>
    <string name="lic_plate">License Plate</string>
    <string name="next">Next</string>
    <string name="sec_question">What college did you go to?</string>
    <string name="title4">Account Information</string>
    <string name="btn_login">Login</string>
    <string name="navi_title">Navigation</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_settings">settingsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search">Search</string>
    <string name="title_activity_confirmation">confirmationActivity</string>
    <string name="schedule_a_reservation">Schedule a Reservation</string>
    <string name="Colon">:</string>


</resources>
